normed and mendertory part

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -10,7 +10,7 @@ SRCS		=	ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c\
 				ft_lstdelone_bonus.c ft_lstiter_bonus.c ft_lstlast_bonus.c\
 				ft_lstnew_bonus.c ft_lstsize_bonus.c ft_lstmap_bonus.c \
 				get_next_line.c trim_free.c is_onstr.c\
-				gnl_utils.c matrix_len.c only_spaces.c ft_atoi.c printf.c printf_utils.c\
+				gnl_utils.c only_spaces.c ft_atoi.c printf.c printf_utils.c\
 
 OBJS		= ${SRCS:.c=.o}
 
